# sestavr

./: .gitignore  ChangeLog.md  LICENSE  Makefile  README.md  fourmolu.yaml  migration.sql  package.yaml  sestavr.cabal  stack.yaml
app/: Main.hs
client/: elm.json
client/review/: elm.json
client/review/src/: ReviewConfig.elm
client/src/: Color.elm  Command.elm  Common.elm  Domain.elm  Id.elm  Main.elm  Modal.elm  Router.elm  Store.elm
client/src/Http/: Extra.elm
client/src/Page/: Exercise.elm  Image.elm  Inspiration.elm  Lesson.elm  Position.elm  Routine.elm  Tag.elm  Target.elm  Targets.elm
client/src/Page/Routine/: LessonPlanner.elm
client/src/Time/: Extra.elm
src/: Api.hs  Config.hs  Model.hs  Server.hs
test/: Spec.hs
