cabal-version: 2.4

name:           sestavr
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/jhrcek/sestavr#readme>
synopsis:       Web application for scheduling yoga lessons
homepage:       https://github.com/jhrcek/sestavr#readme
bug-reports:    https://github.com/jhrcek/sestavr/issues
author:         Jan Hrček
maintainer:     example@example.com
copyright:      2020 Jan Hrček
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
category:       Web
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/jhrcek/sestavr

library
  exposed-modules:
      Api
      Model
      Server
  hs-source-dirs:
      src
  ghc-options: -Wall
  build-depends:
      aeson
    , base >=4.7 && <5
    , bytestring
    , conduit
    , containers
    , file-embed
    , http-media
    , monad-logger
    , persistent
    , persistent-sqlite
    , persistent-template
    , safe-exceptions
    , servant
    , servant-server
    , text
    , time
    , wai
    , warp
  default-language: Haskell2010

executable sestavr-exe
  main-is: Main.hs
  other-modules:
      Paths_sestavr
  hs-source-dirs:
      app
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , sestavr
  default-language: Haskell2010

test-suite sestavr-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_sestavr
  hs-source-dirs:
      test
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , hspec
    , http-client
    , persistent
    , QuickCheck
    , quickcheck-instances
    , servant
    , servant-quickcheck
    , sestavr

  default-language: Haskell2010
